--- a/styles/common.css
+++ b/styles/common.css
@@ -40,7 +40,8 @@
  }
  html,body{
  	height: 100%;
-	background: #4F4B4E;
+    overflow: hidden;
+	// background: #4F4B4E;
  	// background: -webkit-linear-gradient(#1a1822 0%, #4F4B4E 100%);
  }
  .q-img{
@@ -57,13 +58,13 @@
  	z-index: 2;
  	color: #fff;
  	background-color: #a69fa6;
- 	font-size: 0.5625rem;
- 	padding: .25rem .35rem;
+ 	font-size:0.75rem;
+ 	padding: .15rem .35rem;
  	border-radius: 3px;
- 	
+ 	font-weight: lighter;
  }
  .tips .content:before{
- 		content: '';
+ 	content: '';
     position: absolute;
     z-index: 1;
     top: 50%;
