--- a/styles/room.css
+++ b/styles/room.css
@@ -8,17 +8,17 @@
  	width: 100%;
  	height: 100%;
  	background: url('../images/room/7.png') no-repeat,
- 							url('../images/room/9.png') no-repeat,
- 							url('../images/room/8.png') no-repeat,
- 							#bf9e8d;
+ 	url('../images/room/9.png') no-repeat,
+ 	url('../images/room/8.png') no-repeat,
+ 	#bf9e8d;
  	background-position: top 5.59375rem left 0,
-										 	 top left,
-										 	 top 6.96875rem left 1.375rem,
-										 	 top left;
+ 	top left,
+ 	top 6.96875rem left 1.375rem,
+ 	top left;
  	background-size: 1.375rem 25.25rem,
- 									 100% 6.96875rem,
- 									 100% 22.5rem,
- 									 100%;
+ 	100% 6.96875rem,
+ 	100% 22.5rem,
+ 	100% 100%;
  }
  .room header{
  	height: 2.8125rem;
@@ -82,6 +82,15 @@
  	width: 100%;
  	position: relative;
  }
+ /*tips*/
+ .tips{
+ 	background-color: #282828;
+ }
+ .tips .content:before{
+ 	top: 25%;
+ 	border-color: #282828 #282828 transparent transparent;
+ 	transform: rotate(45deg);
+ }
  /** 灯**/
  .page .light{
  	position: absolute;
@@ -94,71 +103,128 @@
  	background-size: cover;
  	z-index: 5;
  }
-/*窗帘杆*/
-.page .rod{
-	position: absolute;
-	top:6rem;
-	left:2.96875rem;
-	right:0.875rem;
-	height: .625rem;
-	background: url('../images/room/3.png') no-repeat;
+ .light .tips{
+ 	left:auto;
+ 	top:auto;
+ 	right: -1.6rem;
+ 	bottom: .2rem;
+ }	
+
+ /*窗帘杆*/
+ .page .rod{
+ 	position: absolute;
+ 	top:6rem;
+ 	left:2.96875rem;
+ 	right:0.875rem;
+ 	height: .625rem;
+ 	background: url('../images/room/3.png') no-repeat;
  	background-size: cover;
 
-}
-/*窗户*/
-.page .window{
-	position: absolute;
-	top:7.34375rem;
-	left:4.4375rem;
-	right: 2.375rem;
-	height: 14.1875rem;
-	background-color: #fff;
-	padding: 8px 11px;
-}
-.page .window .left-win,
-.page .window .right-win{
-	width: calc(50% - 4px);
-	height: 100%;
-	background-color: #bbf6fa;
-	
-}
-.left-win{
-	float: left;	
-	padding-right: 7px;
-}
-.right-win{
-	padding-left: 7px;
-	float: right;
-}
-/*窗帘*/
-/*音响*/
-.page .sound{
-	position: absolute;
-	top:8.1875rem;
-	left:1.75rem;
-	width: 1.5625rem;
-	height: 5rem;
-	background: url('../images/room/10.png') no-repeat;
+ }
+ /*窗户*/
+ .page .window{
+ 	position: absolute;
+ 	top:7.34375rem;
+ 	left:4.4375rem;
+ 	right: 2.375rem;
+ 	height: 14.1875rem;
+ 	background-color: #fff;
+ 	padding: 8px 11px;
+ }
+ .window .tips{
+ 	left:40%;
+ 	top:50%;
+ }
+ .page .window .left-win,
+ .page .window .right-win{
+ 	width: calc(50% - 4px);
+ 	height: 100%;
+ 	background-color: #bbf6fa;
+
+ }
+ .left-win{
+ 	float: left;	
+ 	padding-right: 7px;
+ }
+ .right-win{
+ 	padding-left: 7px;
+ 	float: right;
+ }
+ /*窗帘*/
+ .page .curtains{
+ 	position: absolute;
+ 	top:6.6rem;
+ 	height:20.15rem;
+ 	background: url('../images/room/1.png') no-repeat;
  	background-size: cover;
-}
-/*空调*/
-.page .air{
-	position: absolute;
-	top:16.125rem;
-	right:0;
-	width: 3.5rem;
-	height: 13.96875rem;
-	background: url('../images/room/5.png') no-repeat;
+ }
+ .curtains.left{
+ 	left:3.75rem;
+ 	width:6.5625rem;
+ }
+ .curtains.right{
+ 	right:1.78125rem;
+ 	width:6.5625rem;
+
+ }
+ .curtains.left .tips{
+ 	left:4rem;
+ 	top:auto;
+ 	bottom: 40%;
+ }
+ /*音响*/
+ .page .sound{
+ 	position: absolute;
+ 	top:8.1875rem;
+ 	left:1.75rem;
+ 	width: 1.5625rem;
+ 	height: 5rem;
+ 	background: url('../images/room/10.png') no-repeat;
  	background-size: cover;
-}
-/*沙发*/
-.page .sofa{
-	position: absolute;
-	top:22.4375rem;
-	left:50%;
-	transform: translate(-50%);
-	width: 17.40625rem;
-	height: 10.9375rem;
-	background: url('../images/room/11.png') no-repeat;
+ }
+ .sound .tips{
+ 	left:auto;
+ 	top:auto;
+ 	right: calc(-1.5625rem + -12px);
+ 	bottom: 25%;
+ }
+ /*空调*/
+ .page .air{
+ 	position: absolute;
+ 	top:16.125rem;
+ 	right:0;
+ 	width: 3.5rem;
+ 	height: 13.96875rem;
+ 	background: url('../images/room/5.png') no-repeat;
  	background-size: cover;
-}
+ }
+ .air .tips{
+ 	left:-2.25rem;
+ 	top:1rem;
+ }
+ .air .tips .content:before{
+ 	left:auto;
+ 	right: -12px;
+ 	border-color: transparent transparent #282828 #282828;
+ 	transform: rotate(-45deg);
+ }
+ .air .wind{
+ 	position: absolute;
+ 	top:.625rem;
+ 	left:-0.5625rem;
+ 	width: 3.5rem;
+ 	height: 2.375rem;
+ 	background: url('../images/room/6.png') no-repeat;
+ 	background-size: cover;
+ }
+ /*沙发*/
+ .page .sofa{
+ 	position: absolute;
+ 	top:22.4375rem;
+ 	left:50%;
+ 	transform: translate(-50%);
+ 	width: 17.40625rem;
+ 	height: 10.9375rem;
+ 	background: url('../images/room/11.png') no-repeat;
+ 	background-size: cover;
+ }
