update kitchen page

--- a/styles/kitchen.css
+++ b/styles/kitchen.css
@@ -130,7 +130,7 @@
 }
 .window .frame{
 	height: 100%;
-	width: 0.25rem;
+	width: 0.3rem;
 	background-color: #fff;
 	position: absolute;
 	top: 0;
@@ -149,6 +149,12 @@
 	background: url('../images/kitchen/fan.png') no-repeat;
 	background-size: cover;
 }
+.fan .tips{
+	left:calc(50% + 6px);
+	top:100%;
+	width: calc(.75rem * 3 + .7rem);
+	z-index: 6;
+}
 /*送风机*/
 .air-blower{
 	position: absolute;
@@ -157,8 +163,20 @@
 	width: 1.75rem;
 	height: 8.1875rem;
 	background: url('../images/kitchen/airBlower.png') no-repeat,#9d948d;
-	background-position: top 1.625rem right,top left;
+	background-position: top 1.625rem right -0.125rem,top left;
 	background-size: 1rem 1.9375rem,100% 100%;
+}
+.air-blower .tips{
+	left:auto;
+	top:calc(1.625rem + 1.9375rem - 6px);
+	right: calc(1rem + 6px);
+	width: calc(.75rem * 3 + .7rem);
+}
+.air-blower .tips .content:before{
+	left: auto;
+	right: -12px;
+	border-color: transparent transparent #282828 #282828 ;
+  transform: rotate(-45deg);
 }
 /*冰箱*/
 .fridge{
@@ -170,10 +188,18 @@
 	background: url('../images/kitchen/fridge.png') no-repeat;
 	background-size: cover;
 }
+.fridge .tips{
+	left:calc(100% + 5px);
+	width: calc(.75rem * 2 + .7rem);
+}
+.fridge .tips .content:before{
+	transform: rotate(-45deg);
+	top:50%;
+}
 /*橱柜*/
 .cupboard{
 	position: absolute;
-	right:1.625rem;
+	right:5rem;
 	top:12.1875rem;
 	left: 4.0625rem;
 	height: 14.625rem;
@@ -182,18 +208,95 @@
 	background-size: 5.5625rem 100%,4.1875rem 100%,4.625rem 100%;
 	
 }
+/*上门框*/
 .cupboard .top.frame{
 	background: linear-gradient(to right,
-		transparent 33.33%, #beb7b1 0,
-		#beb7b1 calc(33.33% + 0.125rem),transparent 0,
-		transparent 66.66%, #beb7b1 0,
-		#beb7b1 calc(66.66% + 0.125rem),transparent 0);
-	background-size: 100% 0.125rem;
+		transparent 25%, #beb7b1 0,
+		#beb7b1 calc(25% + 0.0625rem),transparent 0,
+		transparent 50%, #beb7b1 0,
+		#beb7b1 calc(50% + 0.0625rem),transparent 0,
+	  transparent 75%, #beb7b1 0,
+		#beb7b1 calc(75% + 0.0625rem),transparent 0);
+	background-size: 100% 0.0625rem;
 	width: 100%;
 	height: 5.5625rem;
 }
+/*灯带*/
+.cupboard .light-belt{
+	position: absolute;
+	top: 5.25rem;
+	left: 0;
+	right: 0;
+	height: 0.3125rem;
+	background-color: #fff;
+	box-shadow:inset 0px 0px 2px #ddd,
+						 inset 0px 0px 4px transparent,
+						 inset 0px 0px 6px #ddd;
+}
+.light-belt .tips{
+	left: 65%;
+	top:0.5125rem;
+}
+/*开关*/
+.cupboard .btn{
+	position: absolute;
+	top: 6.5625rem;
+	left:0.875rem;
+	width: 1.625rem;
+	height: 0.875rem;
+	background: url('../images/kitchen/btn.png') no-repeat;
+	background-size: cover;
+}
+/*水龙头*/
+.cupboard .water-tap{
+	position: absolute;
+	bottom:4.6875rem;
+	left: 8.8125rem;
+	width: 3.125rem;
+	height: 2.5rem;
+	background: url('../images/kitchen/waterTap.png') no-repeat;
+	background-size: cover;
+}
+/*下门框*/
 .cupboard .bottom.frame{
-
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	background: linear-gradient(to right,
+		transparent 50%, #beb7b1 0,
+		#beb7b1 calc(50% + 0.0625rem),transparent 0,
+	  transparent 75%, #beb7b1 0,
+		#beb7b1 calc(75% + 0.0625rem),transparent 0);
+	background-size: 100% 0.0625rem;
+	width: 100%;
+	height: 4.625rem;
+}
+.cupboard .bottom.frame:before{
+	background-color: #a5a6a5;
+	position: absolute;
+	content: '';
+	left: 0;
+	top:-0.3125rem;
+	right: 0;
+	height: 0.25rem;
+}
+.cupboard .bottom.frame:after{
+	content: '';
+	position: absolute;
+	height: 0.0625rem;
+	background-color: #beb7b1;
+	width: 50%;
+	top:1.25rem;
+	left: 0;
+}
+/*底线*/
+.cupboard .bottom-line{
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	height: 0.25rem;
+	background-color: #fff;
 }
 /*抽烟机*/
 .smoke-machine{
@@ -201,9 +304,18 @@
 	right: 1.625rem;
 	top: 4.0625rem;
 	width: 3.5625rem;
-	height: 9.875rem;
+	height: 18.6875rem;
 	background-color: #e5e4e2;
 	z-index: 1
+}
+.smoke-machine:after{
+	content: '';
+	position: absolute;
+	height: 5rem;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-color: #7f818e;
 }
 .smoke-machine .machine{
 	position: absolute;
@@ -214,7 +326,18 @@
 	background: url('../images/kitchen/smokeMachine.png') no-repeat;
 	background-size: cover;
 }
-
+.smoke-machine .machine .tips{
+	top:calc(100% - 6px);
+	left:auto;
+	right: calc(100% + 12px);
+	width: calc(.75rem * 3 + .7rem);
+}
+.smoke-machine .machine .tips .content:before{
+	left: auto;
+	right: -12px;
+	transform: rotate(-45deg);
+	border-color: transparent transparent #282828 #282828;
+}
 /*操作台墙*/
 .console-wall{
 	position: absolute;
@@ -227,12 +350,13 @@
 /*锅*/
 .pot{
 	position: absolute;
-  top: 20.21875rem;
+  top: 20.41875rem;
 	right:1.34375rem;
 	width: 5.375rem;
 	height: 2.375rem;
 	background: url('../images/kitchen/pot.png') no-repeat;
 	background-size: cover;
+	z-index: 1;
 }
 /*操作台*/
 .console{
@@ -242,6 +366,7 @@
 	width: 7.09375rem;
 	height: 1.53125rem;
 	background-color: #ccc8c9;
+	z-index: 1;
 }
 .console .top{
 	position: absolute;
@@ -269,6 +394,60 @@
 	height: 0.3125rem;
 	background-color: #343331;
 }
+/*健康食谱*/
+.recipes{
+	position: absolute;
+	top:22rem;
+	left:11.09375rem;
+	width: 5.5625rem;
+	height: 2.625rem;
+	background: url('../images/kitchen/recipes.png') no-repeat;
+	background-size: cover;
+	z-index: 1;
+}
+.recipes .tips{
+	left:auto;
+	right: 5.5625rem;
+	width: calc(0.75rem * 4 + .7rem);
+}
+.recipes .tips .content:before{
+	left: auto;
+	right: -12px;
+	top:50%;
+	border-color: transparent transparent #282828 #282828 ;
+  transform: rotate(45deg);
+}
+.stool1{
+	position: absolute;
+	left:5.1875rem;
+	top:25rem;
+	width: 3.875rem;
+	height: 6.5rem;
+	background: url('../images/kitchen/stool1.png') no-repeat;
+	background-size: cover;
+	z-index: 1;
+}
+.stool2{
+	position: absolute;
+	left:11.75rem;
+	top:25.625rem;
+	width: 3.0625rem;
+	height: 6.4375rem;
+	background: url('../images/kitchen/stool2.png') no-repeat;
+	background-size: cover;
+	z-index: 1;
+}
+.stool3{
+	position: absolute;
+	left:16.875rem;
+	top:25.625rem;
+	width: 3.0625rem;
+	height: 6.4375rem;
+	background: url('../images/kitchen/stool3.png') no-repeat;
+	background-size: cover;
+	z-index: 1;
+}
+/*凳子*/
 /*地毯*/
 .carpet{
 	position: absolute;
@@ -282,9 +461,47 @@
 /*中控*/
 .model{
 	position: absolute;
+	z-index: 1;
 	bottom:0;
 	width: 100%;
-	height: 10.25rem;
-	background: rgba(40,40,40,.3);
+	height: 13.75rem;
+	background: rgba(40,40,40,.45);
+	padding: .625rem 0.78125rem;
+}
+.model .icon {
+	margin: .625rem 0.78125rem;
+	width: calc(33.33% - 1.5625rem);
+	height: 2rem;
+	line-height: 2rem;
+	float: left;
+	font-size: 0.75rem;
+	color: #fff;
+	padding-left: 2.3125rem;
+	background-size: 2rem 2rem;
+	background-repeat: no-repeat;
 }
 
+.model .icon.btn-fridge{
+	background-image: url('../images/kitchen/control/fridge.png');
+}
+.model .icon.btn-light{
+	background-image: url('../images/kitchen/control/light.png');
+}
+.model .icon.btn-smoke-machine{
+	background-image: url('../images/kitchen/control/smoke-m.png');
+}
+.model .icon.btn-fan{
+	background-image: url('../images/kitchen/control/fan.png');
+}
+.model .icon.btn-air-blower{
+	background-image: url('../images/kitchen/control/air-blower.png');
+}
+.model .icon.btn-light-belt{
+	background-image: url('../images/kitchen/control/light-belt.png');
+}
+.model .icon.btn-win{
+	background-image: url('../images/kitchen/control/win.png');
+}
+.model .icon.btn-recipes{
+	background-image: url('../images/kitchen/control/recipes.png');
+}
