--- a/app/components/Door/door.less
+++ b/app/components/Door/door.less
@@ -181,6 +181,10 @@ section.index {
      .equipment .tips{
      	left:~'calc(3.625rem + 12px)';
      	top: .3rem;
+        .point{
+            left: -18%;
+            top:70%;
+        }
      }
     .model-win{
         position: absolute;
