--- a/app/components/Air/air.less
+++ b/app/components/Air/air.less
@@ -34,7 +34,9 @@
 	 	font-size: 1.125rem;
 	 	text-align: center;
 	 }
-	 
+	 .color-white{
+	 	color: #fff;
+	 }
 	 .page .temperature{
 		 	height: 24.53125rem;
 		 	display: -webkit-box;
