--- a/app/components/Room/room.less
+++ b/app/components/Room/room.less
@@ -131,7 +131,8 @@
      .page .window .right-win{
      	width: ~'calc(50% - 4px)';
      	height: 100%;
-     	background-color: #bbf6fa;
+     	background-color: rgba(187, 246, 250, 0.7);
+        // opacity: .9;
      }
      .page .window .frame-win{
         background-color: #fff;
@@ -171,7 +172,7 @@
      	position: absolute;
      	top:6.6rem;
      	height:20.15rem;
-     	background: url('images/1.png') no-repeat;
+     	background: rgba(187, 246, 250, 0.9) url('images/1.png') 0 0 no-repeat;
      	background-size: cover;
         transition: width 3s;
      }
