--- a/app/components/Kitchen/kitchen.less
+++ b/app/components/Kitchen/kitchen.less
@@ -103,6 +103,7 @@
 			height: 100%;
 			background: url('images/win.png');
 			background-size: cover;
+			opacity: .7;
 		}
 		.left{
 			left: 0;
@@ -198,8 +199,27 @@
 			left: -50%;
 			width: 80/32rem;
 			height: 62/32rem;
-			background: transparent url('images/gas.png') 0 0 no-repeat;
-			background-size: cover;
+			transition:all .5s;
+			transform-origin: right;
+		}
+		&.open{
+			&:before{
+				background: transparent url('images/gas.png') 0 0 no-repeat;
+				background-size: 100% 100%;
+				animation: blowerfan 1.2s infinite linear;
+			}
+		}
+		
+		@keyframes blowerfan{
+			0%{
+				transform:scale3d(.6,.6,.6) translate3d(0,0,0);
+			}
+			50%{
+				transform:scale3d(.9,.9,.9) translate3d(-15%,0,0);
+			}
+			100%{
+				transform:scale3d(1.2,1.2,1.2) translate3d(-30%,0,0);
+			}
 		}
 		.tips{
 			left:auto;
@@ -270,10 +290,18 @@
 			left: 0;
 			right: 0;
 			height: 0.3125rem;
-			background-color: #fff;
-			box-shadow:inset 0px 0px 2px #ddd,
-								 inset 0px 0px 4px transparent,
-								 inset 0px 0px 6px #ddd;
+			background-color: rgba(255, 255, 255, 0.7);
+			transition: all .5s;
+			&.open{
+				box-shadow: 0 .8rem 1.6rem #fff, 0 .5rem 1rem #fff, 0 0.25rem .5rem #fff;
+				// animation: beltshadow 1.2s infinite linear;
+			}
+			@keyframes beltshadow{
+				0% {box-shadow: 0 0 0 transparent;}
+		    50% {box-shadow: 0 1.5rem 3rem #fff, 0 1rem 2rem #fff, 0 0.5rem 1rem #fff;}
+		    100% {box-shadow: 0 0 0 transparent;}
+			}
+			
 			.tips{
 				left: 65%;
 				top:0.5125rem;
@@ -371,16 +399,45 @@
 			height: 11.8125rem;
 			background: url('images/smokeMachine.png') no-repeat;
 			background-size: cover;
+			.-light{
+				opacity: 0;
+				position: absolute;
+				content: '';
+				bottom: -76/32rem;
+				left: -.5rem;
+				width: 206/32rem;
+				height: 76/32rem;
+				background: transparent url('images/油烟机灯.png') 0 0 no-repeat;
+				background-size: cover;
+				transition: opacity .5s;
+			}
 			&.open{
+				.-light{
+					opacity: 1;
+				}
 				&:before{
 					position: absolute;
 					content: '';
-					bottom: -76/32rem;
+					bottom: -94/32rem;
 					left: -.5rem;
-					width: 206/32rem;
-					height: 76/32rem;
-					background: transparent url('images/油烟机灯.png') 0 0 no-repeat;
-					background-size: cover;
+					width: 200/32rem;
+					height: 94/32rem;
+					transition: all .5s;
+					z-index: 2;
+					background: transparent url('images/gas1.png') 0 0 no-repeat;
+					background-size: 100% 100%;
+					animation: machinefan 1.2s infinite linear;
+				}
+				@keyframes machinefan{
+					0%{
+						transform: scale3d(1.2,1.2,1.2) translate3d(0,50%,0);
+					}
+					50%{
+						transform: scale3d(.9,.9,.9) translate3d(0,25%,0);
+					}
+					100%{
+						transform: scale3d(.6,.6,.6) translate3d(0,0,0);
+					}
 				}
 			}
 			.tips{
