--- a/app/components/Fridge/fridge.less
+++ b/app/components/Fridge/fridge.less
@@ -199,5 +199,21 @@
 			}
 		}
  	}
-
+ 	.q-slider-title{
+ 		text-align: center;
+ 		font-size: 18/16rem;
+ 		padding: 8px 0;
+ 	}
+	.q-slider-desc{
+		padding: 12px 0;
+		margin-bottom: 12px;
+		.-left{
+			float: left;
+			text-align: left;
+		}
+		.-right{
+			float: right;
+			text-align: right;
+		}
+	}
 } 
