--- a/app/components/Room/room.less
+++ b/app/components/Room/room.less
@@ -303,4 +303,14 @@
      	background: url('images/11.png') no-repeat;
      	background-size: cover;
      }
+     .q-mask{
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.4);
+        z-index: 6;
+        display: none;
+     }
  }
