--- a/app/components/Air/air.less
+++ b/app/components/Air/air.less
@@ -72,17 +72,20 @@
 				display: flex;
 				justify-content: center;
 			  align-items: center;
+			  line-height: 4rem;
 			 button{
 			 	padding: 0 8px;
 			 	font-size: 2.5rem;
-			 	font-weight: 400;
+			 	font-weight: 200;
 			 	color: rgba(238, 238, 238, 0.9);
 			 	touch-action:manipulation;
 			 	user-select:none;
 			 	-webkit-appearance:button;
 			 	transition: all .3s cubic-bezier(.645,.045,.355,1);
+			 	line-height: 4rem;
 			 }
 			 .progress{
+			 		line-height: 4rem;
 				 	height:0.4375rem;
 				 	width:11.75rem;
 				 	background-color: rgba(238, 238, 238, 0.3);
@@ -138,9 +141,9 @@
 			&:after{
 				position: absolute;
 				content: '';
-				width: 18px;
-				height: 18px;
-				left: ~'calc(50% - 9px)';
+				width: 16px;
+				height: 16px;
+				left: ~'calc(50% - 8px)';
 
 			}
 			&:before{
